# Linter

./: CMakeLists.txt  MakeFile  README.md
.github/workflows/: build.yml
src/: error.c  error.h  linter.c  linter.py
